--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# Ref: https://dev.classmethod.jp/articles/docker-compose-localstack-aws-sdk-for-javascript-v3-local/
 version: "3.9"
 
 services:
@@ -25,5 +24,5 @@ services:
     env_file:
       - .env
     volumes:
-      - "./share/localstack:/tmp/localstack"
+      - "./share/localstack:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
